--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,13 @@ buildToolsVersion=27.0.3
 compileAPI=27
 minAPI=14
 targetAPI=27
-versionName=1.0.0-alpha02
 versionCode=180531
+versionName=1.0.0-alpha03
+
+bintray_artifactid=nitro
+bintray_group_name=com.peridotapps
+bintray_org=peridot-apps
+bintray_package_name=com.peridotapps.nitro
+bintray_repo=PeridotApps
+bintray_user=peridotapps
+bintray_vcs_url=nitro.git
