--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.androidToolsVersion = '3.0.1'
-    ext.mavenPlugin = '2.0'
-    ext.jfrogVersion = '1.8.0'
+
+    ext {
+        alternateSupportLibraryVersion = '1.0.3'
+        androidToolsVersion = '3.0.1'
+        databindingVersion = '3.1.3'
+        espressoVersion = '2.2.2'
+        jfrogVersion = '1.8.0'
+        junitVersion = '4.12'
+        kotlin_version = '1.2.60'
+        lifecycleVersion = '1.1.1'
+        mavenPlugin = '2.0'
+        playServicesVersion = '12.0.0'
+        robolectricVersion = '3.5.1'
+        supportLibraryVersion = '27.1.1'
+    }
 
     repositories {
         google()
@@ -14,6 +26,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$androidToolsVersion"
         classpath "com.github.dcendents:android-maven-gradle-plugin:$mavenPlugin"
         classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$jfrogVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -21,18 +34,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
-}
-
-ext {
-    alternateSupportLibraryVersion = '1.0.3'
-    databindingVersion= '3.1.3'
-    espressoVersion = '2.2.2'
-    junitVersion = '4.12'
-    playServicesVersion = '12.0.0'
-    robolectricVersion = '3.5.1'
-    supportLibraryVersion = '27.1.1'
-    lifecycleVersion = '1.1.1'
 }
 
 task clean(type: Delete) {
