Update build targets and get to compile again

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,7 @@
 org.gradle.parallel=true
-
-buildToolsVersion=27.0.3
-compileAPI=27
+buildToolsVersion=29.0.2
+compileAPI=29
 minAPI=14
-targetAPI=27
-versionCode=180819
-versionName=1.0.0-alpha11
-
-bintray_artifactid=nitro
-bintray_group_name=com.peridotapps
-bintray_org=peridot-apps
-bintray_package_name=com.peridotapps.nitro
-bintray_repo=PeridotApps
-bintray_user=peridotapps
-bintray_vcs_url=nitro.git
+targetAPI=29
+versionCode=191008
+versionName=1.0.0
